Work and About Section Updated

--- a/menus/about.html
+++ b/menus/about.html
@@ -20,13 +20,19 @@
   <!-- Navbar  -->
   <header class="navbar">
     <div class="logo">
-      <a href="/menus/contact.html" class="heading">Vinay B.</a>
+      <a href="/index.html" class="heading">Vinay B.</a>
     </div>
-    <div class="menu">
+    <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    <div class="menu" id="nav-menu">
       <ul class="menu-head">
         <li><a href="/index.html">Home</a></li>
         <li><a href="./menus/about.html">About</a></li>
         <li><a href="/menus/work.html">Work</a></li>
+         <li class="mobile-btn"><a href="/menus/contact.html" class="btn small mob-reach-out">Reach out →</a></li>
         <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
       </ul>
     </div>
@@ -38,14 +44,12 @@
   <!-- hero Section -->
 
   <div class="about-container">
-    <img src="/images/vinay-bg2.jpeg" alt="Profile Photo" class="profile-img" />
+    <img src="/images/vinay-3img.jpeg" alt="Profile Photo" class="profile-img" style="height: 250px;width: 280px;"/>
     <h1><span>Vinay</span> Begar</h1>
     <p class="role">Frontend Web Developer</p>
   </div>
 
   <div class="line"></div>
-  <!-- About information -->
-  <!-- <section class="self-information"> -->
   <div class="stack">
     <!-- <h3>My Stack</h3> -->
     <div class="marquee">
@@ -62,6 +66,17 @@
         <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
 
         <!-- Duplicate for infinite scroll effect -->
+        <img src="/stack/html-1.svg" alt="HTML" height="70px" />
+        <img src="/stack/css-3.svg" alt="CSS" height="70px" />
+        <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
+        <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
+        <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
+        <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
+        <img src="/stack/imgi_4_javascript.svg" alt="Javascript" height="70px" />
+        <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
+        <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
+
+         <!-- Duplicate for infinite scroll effect -->
         <img src="/stack/html-1.svg" alt="HTML" height="70px" />
         <img src="/stack/css-3.svg" alt="CSS" height="70px" />
         <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
@@ -91,7 +106,7 @@
             <h3 class="project-title">Meta Front-End Developer</h3>
             <p class="project-role">Coursera (2025)</p>
             <div class="tech-stack">
-              <a href=""><span class="tech">View Certificate</span></a>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/5QDOIAXCRGNX"><span class="tech">View Certificate</span></a>
               <!-- <span class="tech"></span> -->
             </div>
           </div>
@@ -106,36 +121,10 @@
             <h3 class="project-title">Hacker Rank CSS</h3>
             <p class="project-role">HackerRank (2024)</p>
             <div class="tech-stack">
-             <a href=""><span class="tech">View Certificate</span></a> 
+             <a href="https://www.hackerrank.com/certificates/ce953d92e573"><span class="tech">View Certificate</span></a> 
             </div>
           </div>
         </div>
-
-        <!-- <div class="cert-left">
-          <img
-            class="cert-img1"
-            src="/images/Cousera certificate.jpeg"
-            alt=""
-          />
-          <div class="cert-details1">
-            <h1>Meta Front-End Developer</h1>
-            <h2>Coursera (2025)</h2>
-            <br />
-          </div>
-        </div>
-
-        <div class="cert-right">
-          <img
-            class="cert-img2"
-            src="/images/Css Hacker Rank certificate.png"
-            alt=""
-          />
-          <div class="cert-details2">
-            <h1>HackerRank (CSS)</h1>
-            <h2>HackerRank (2025)</h2>
-            <br />
-          </div>
-        </div> -->
       </div>
   </section>
 
@@ -143,7 +132,7 @@
     <div class="heading">
       <h1>Checkout My Works</h1>
       <a href="/menus/work.html"><button class="after-button">
-          <h2>More about me</h2>
+          <h2> Explore My Creations</h2>
         </button></a>
     </div>
     <!-- <h1>these isn't  everything yet</h1> -->
