Works Card Added

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           experiences
         </p>
         <div class="buttons">
-          <a href="/menus/work.html" class="btn light">View projects</a>
-          <a href="#" class="btn dark">Download my resume ⬇</a>
+          <a href="/menus/work.html" class="btn light">Check All Works →</a>
+          <!-- <a href="#" class="btn dark">Download my resume ⬇</a> -->
         </div>
       </section>
 
