--- a/menus/contact.html
+++ b/menus/contact.html
@@ -65,7 +65,8 @@
             </form>
             <form class="contact-form">
             <label> Message*</label>
-            <input type="text" placeholder=" " required />
+            <!-- <input type="text" placeholder=" " required /> -->
+             <textarea name="" id="" rows="4"></textarea>
           </form>
           <button class="bt">Send a Message</button>
           </div>
