--- a/menus/work.html
+++ b/menus/work.html
@@ -98,8 +98,8 @@
       <div class="projects-container">
         <div class="project-card">
           <div class="project-image">
-            <img
-              src="/project-images/Brwoser extension img.jpg"
+            <img style="height: 320px; width: 400px;"
+              src="/project-images/Desktop view.png"
               alt="Project Image"
             />
             <div class="image-fade"></div>
@@ -116,7 +116,7 @@
 
         <div class="project-card">
           <div class="project-image">
-            <img src="/project-images/job-listing.jpg" alt="Project Image" />
+            <img style="height: 320px; width: 400px;" src="/project-images/pig-game.png" alt="Project Image" />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
@@ -131,7 +131,7 @@
 
         <div class="project-card">
           <div class="project-image">
-            <img src="/project-images/job-listing.jpg" alt="Project Image" />
+            <img style="height: 300px;" src="/project-images/desktop view-data.png" alt="Project Image" />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
@@ -148,8 +148,8 @@
       <div class="projects-container">
         <div class="project-card">
           <div class="project-image">
-            <img
-              src="/project-images/Brwoser extension img.jpg"
+            <img 
+              src="/project-images/huddle-landing-page.jpg"
               alt="Project Image"
             />
             <div class="image-fade"></div>
@@ -166,7 +166,7 @@
 
         <div class="project-card">
           <div class="project-image">
-            <img src="/project-images/job-listing.jpg" alt="Project Image" />
+            <img src="/project-images/perfume-gabrille img.jpg" alt="Project Image" />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
@@ -181,7 +181,7 @@
 
         <div class="project-card">
           <div class="project-image">
-            <img src="/project-images/job-listing.jpg" alt="Project Image" />
+            <img src="/project-images/law-justice img.png" alt="Project Image" />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
