--- a/menus/about.html
+++ b/menus/about.html
@@ -23,16 +23,16 @@
       <a href="/index.html" class="heading">Vinay B.</a>
     </div>
     <div class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <div class="menu" id="nav-menu">
       <ul class="menu-head">
         <li><a href="/index.html">Home</a></li>
         <li><a href="./menus/about.html">About</a></li>
         <li><a href="/menus/work.html">Work</a></li>
-         <li class="mobile-btn"><a href="/menus/contact.html" class="btn small mob-reach-out">Reach out →</a></li>
+        <li class="mobile-btn"><a href="/menus/contact.html" class="btn small mob-reach-out">Reach out →</a></li>
         <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
       </ul>
     </div>
@@ -44,10 +44,25 @@
   <!-- hero Section -->
 
   <div class="about-container">
-    <img src="/images/vinay-3img.jpeg" alt="Profile Photo" class="profile-img" style="height: 250px;width: 280px;"/>
+    <img src="/images/vinay-3img.jpeg" alt="Profile Photo" class="profile-img" />
     <h1><span>Vinay</span> Begar</h1>
     <p class="role">Frontend Web Developer</p>
   </div>
+  <section class="about-me">
+    <div class="about-content">
+      <h2>About Me</h2>
+      <p>
+        I love building things from the ground up — creating from my own ideas instead of solving someone else’s puzzle.
+        To me, a good website isn’t just about pixels or performance; it’s about how it makes people feel when they use
+        it.
+
+        
+      <p>
+        I’m always exploring, learning, and pushing myself to grow — turning ideas into experiences that truly mean
+        something.
+      </p>
+    </div>
+  </section>
 
   <div class="line"></div>
   <div class="stack">
@@ -76,7 +91,7 @@
         <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
         <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
 
-         <!-- Duplicate for infinite scroll effect -->
+        <!-- Duplicate for infinite scroll effect -->
         <img src="/stack/html-1.svg" alt="HTML" height="70px" />
         <img src="/stack/css-3.svg" alt="CSS" height="70px" />
         <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
@@ -106,7 +121,8 @@
             <h3 class="project-title">Meta Front-End Developer</h3>
             <p class="project-role">Coursera (2025)</p>
             <div class="tech-stack">
-              <a href="https://www.coursera.org/account/accomplishments/specialization/5QDOIAXCRGNX"><span class="tech">View Certificate</span></a>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/5QDOIAXCRGNX"><span
+                  class="tech">View Certificate</span></a>
               <!-- <span class="tech"></span> -->
             </div>
           </div>
@@ -121,7 +137,8 @@
             <h3 class="project-title">Hacker Rank CSS</h3>
             <p class="project-role">HackerRank (2024)</p>
             <div class="tech-stack">
-             <a href="https://www.hackerrank.com/certificates/ce953d92e573"><span class="tech">View Certificate</span></a> 
+              <a href="https://www.hackerrank.com/certificates/ce953d92e573"><span class="tech">View
+                  Certificate</span></a>
             </div>
           </div>
         </div>
@@ -132,7 +149,7 @@
     <div class="heading">
       <h1>Checkout My Works</h1>
       <a href="/menus/work.html"><button class="after-button">
-          <h2> Explore My Creations</h2>
+          <h2>Check All Works →</h2>
         </button></a>
     </div>
     <!-- <h1>these isn't  everything yet</h1> -->
