--- a/menus/work.html
+++ b/menus/work.html
@@ -29,21 +29,22 @@
       </div>
       <div class="menu" id="nav-menu">
         <ul class="menu-head">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/menus/about.html">About</a></li>
-          <li><a href="./menus/work.html">Work</a></li>
-           <li class="mobile-btn"><a href="/menus/contact.html" class="btn small mob-reach-out">Reach out →</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./work.html">Work</a></li>
+           <li class="mobile-btn"><a href="./contact.html" class="btn small mob-reach-out">Reach out →</a></li>
           <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
         </ul>
       </div>
       <div class="nav-right">
-        <a href="/menus/contact.html" class="btn small">Reach out →</a>
+        <a href="./contact.html" class="btn small">Reach out →</a>
       </div>
     </header>
     <section class="hero">
       <h1>Work Showcase</h1>
     </section>
     <div class="line"></div>
+    <!-- row 1 -->
     <section class="work-section">
       <div class="projects-container">
         <div class="project-card">
@@ -58,8 +59,8 @@
             <h3 class="project-title">Browser extension manager</h3>
             <p class="project-role">Web Developer</p>
             <div class="tech-stack">
-              <span class="tech">Github</span>
-              <span class="tech">Livelink</span>
+            <a href="https://github.com/vinay-begar/Guess-My-Number-"><span class="tech">Github</span></a>
+             <a href="https://guess-my-number-inky-pi.vercel.app/"></a> <span class="tech">Livelink</span>
             </div>
           </div>
         </div>
