--- a/menus/about.html
+++ b/menus/about.html
@@ -1,181 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/about.css" />
+    <script src="/js/about.js" defer></script>
+  </head>
 
-  <link rel="stylesheet" href="/css/about.css" />
-  <script src="/js/about.js" defer></script>
-</head>
+  <body>
+    <!-- Navbar  -->
+    <header class="navbar">
+      <div class="logo">
+        <a href="../index.html" class="heading">Vinay B.</a>
+      </div>
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="menu" id="nav-menu">
+        <ul class="menu-head">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./work.html">Work</a></li>
+          <li class="mobile-btn">
+            <a href="./contact.html" class="btn small mob-reach-out"
+              >Reach out →</a
+            >
+          </li>
+          <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
+        </ul>
+      </div>
+      <div class="nav-right">
+        <!-- <span class="available">● available for work</span> -->
+        <a href="./contact.html" class="btn small">Reach out →</a>
+      </div>
+    </header>
+    <!-- hero Section -->
 
-<body>
-  <!-- Navbar  -->
-  <header class="navbar">
-    <div class="logo">
-      <a href="/index.html" class="heading">Vinay B.</a>
+    <div class="about-container">
+      <img
+        src="/images/vinay-3img.jpeg"
+        alt="Profile Photo"
+        class="profile-img"
+      />
+      <h1><span>Vinay</span> Begar</h1>
+      <p class="role">Frontend Web Developer</p>
     </div>
-    <div class="hamburger" id="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <div class="menu" id="nav-menu">
-      <ul class="menu-head">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="./menus/about.html">About</a></li>
-        <li><a href="/menus/work.html">Work</a></li>
-        <li class="mobile-btn"><a href="/menus/contact.html" class="btn small mob-reach-out">Reach out →</a></li>
-        <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
-      </ul>
-    </div>
-    <div class="nav-right">
-      <!-- <span class="available">● available for work</span> -->
-      <a href="/menus/contact.html" class="btn small">Reach out →</a>
-    </div>
-  </header>
-  <!-- hero Section -->
+    <section class="about-me">
+      <div class="about-content">
+        <h2>About Me</h2>
+        <p>
+          I love building things from the ground up — creating from my own ideas
+          instead of solving someone else’s puzzle. To me, a good website isn’t
+          just about pixels or performance; it’s about how it makes people feel
+          when they use it.
+        </p>
 
-  <div class="about-container">
-    <img src="/images/vinay-3img.jpeg" alt="Profile Photo" class="profile-img" />
-    <h1><span>Vinay</span> Begar</h1>
-    <p class="role">Frontend Web Developer</p>
-  </div>
-  <section class="about-me">
-    <div class="about-content">
-      <h2>About Me</h2>
-      <p>
-        I love building things from the ground up — creating from my own ideas instead of solving someone else’s puzzle.
-        To me, a good website isn’t just about pixels or performance; it’s about how it makes people feel when they use
-        it.
+        <p>
+          I’m always exploring, learning, and pushing myself to grow — turning
+          ideas into experiences that truly mean something.
+        </p>
+      </div>
+    </section>
 
-        
-      <p>
-        I’m always exploring, learning, and pushing myself to grow — turning ideas into experiences that truly mean
-        something.
-      </p>
-    </div>
-  </section>
+    <div class="line"></div>
+    <div class="stack">
+      <!-- <h3>My Stack</h3> -->
+      <div class="marquee">
+        <div class="svg-icons">
+          <!-- These icons will scroll -->
+          <img src="/stack/html-1.svg" alt="HTML" height="70px" />
+          <img src="/stack/css-3.svg" alt="CSS" height="70px" />
+          <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
+          <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
+          <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
+          <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
+          <img
+            src="/stack/imgi_4_javascript.svg"
+            alt="Javascript"
+            height="70px"
+          />
+          <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
+          <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
 
-  <div class="line"></div>
-  <div class="stack">
-    <!-- <h3>My Stack</h3> -->
-    <div class="marquee">
-      <div class="svg-icons">
-        <!-- These icons will scroll -->
-        <img src="/stack/html-1.svg" alt="HTML" height="70px" />
-        <img src="/stack/css-3.svg" alt="CSS" height="70px" />
-        <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
-        <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
-        <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
-        <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
-        <img src="/stack/imgi_4_javascript.svg" alt="Javascript" height="70px" />
-        <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
-        <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
+          <!-- Duplicate for infinite scroll effect -->
+          <img src="/stack/html-1.svg" alt="HTML" height="70px" />
+          <img src="/stack/css-3.svg" alt="CSS" height="70px" />
+          <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
+          <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
+          <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
+          <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
+          <img
+            src="/stack/imgi_4_javascript.svg"
+            alt="Javascript"
+            height="70px"
+          />
+          <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
+          <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
 
-        <!-- Duplicate for infinite scroll effect -->
-        <img src="/stack/html-1.svg" alt="HTML" height="70px" />
-        <img src="/stack/css-3.svg" alt="CSS" height="70px" />
-        <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
-        <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
-        <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
-        <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
-        <img src="/stack/imgi_4_javascript.svg" alt="Javascript" height="70px" />
-        <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
-        <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
-
-        <!-- Duplicate for infinite scroll effect -->
-        <img src="/stack/html-1.svg" alt="HTML" height="70px" />
-        <img src="/stack/css-3.svg" alt="CSS" height="70px" />
-        <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
-        <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
-        <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
-        <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
-        <img src="/stack/imgi_4_javascript.svg" alt="Javascript" height="70px" />
-        <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
-        <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
+          <!-- Duplicate for infinite scroll effect -->
+          <img src="/stack/html-1.svg" alt="HTML" height="70px" />
+          <img src="/stack/css-3.svg" alt="CSS" height="70px" />
+          <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
+          <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
+          <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
+          <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
+          <img
+            src="/stack/imgi_4_javascript.svg"
+            alt="Javascript"
+            height="70px"
+          />
+          <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
+          <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- </section> -->
-  <div class="last-line"></div>
+    <!-- </section> -->
+    <div class="last-line"></div>
 
-  <section class="Certification">
-    <h4>Certifications</h4>
-    <div class="certificate">
-      <div class="projects-container">
-        <div class="project-card">
-          <div class="project-image">
-            <img src="/images/Cousera certificate.jpeg" alt="Project Image" />
-            <div class="image-fade"></div>
+    <section class="Certification">
+      <h4>Certifications</h4>
+      <div class="certificate">
+        <div class="projects-container">
+          <div class="project-card">
+            <div class="project-image">
+              <img src="/images/Cousera certificate.jpeg" alt="Project Image" />
+              <div class="image-fade"></div>
+            </div>
+            <div class="project-details">
+              <h3 class="project-title">Meta Front-End Developer</h3>
+              <p class="project-role">Coursera (2025)</p>
+              <div class="tech-stack">
+                <a
+                  href="https://www.coursera.org/account/accomplishments/specialization/5QDOIAXCRGNX"
+                  ><span class="tech">View Certificate</span></a
+                >
+                <!-- <span class="tech"></span> -->
+              </div>
+            </div>
           </div>
-          <div class="project-details">
-            <h3 class="project-title">Meta Front-End Developer</h3>
-            <p class="project-role">Coursera (2025)</p>
-            <div class="tech-stack">
-              <a href="https://www.coursera.org/account/accomplishments/specialization/5QDOIAXCRGNX"><span
-                  class="tech">View Certificate</span></a>
-              <!-- <span class="tech"></span> -->
+
+          <div class="project-card">
+            <div class="project-image">
+              <img
+                src="/images/Css Hacker Rank certificate.png"
+                alt="Project Image"
+              />
+              <div class="image-fade"></div>
+            </div>
+            <div class="project-details">
+              <h3 class="project-title">Hacker Rank CSS</h3>
+              <p class="project-role">HackerRank (2024)</p>
+              <div class="tech-stack">
+                <a href="https://www.hackerrank.com/certificates/ce953d92e573"
+                  ><span class="tech">View Certificate</span></a
+                >
+              </div>
             </div>
           </div>
         </div>
+      </div>
+    </section>
 
-        <div class="project-card">
-          <div class="project-image">
-            <img src="/images/Css Hacker Rank certificate.png" alt="Project Image" />
-            <div class="image-fade"></div>
-          </div>
-          <div class="project-details">
-            <h3 class="project-title">Hacker Rank CSS</h3>
-            <p class="project-role">HackerRank (2024)</p>
-            <div class="tech-stack">
-              <a href="https://www.hackerrank.com/certificates/ce953d92e573"><span class="tech">View
-                  Certificate</span></a>
-            </div>
-          </div>
+    <div class="before-pattern">
+      <div class="heading">
+        <h1>Checkout My Works</h1>
+        <a href="/menus/work.html"
+          ><button class="after-button">
+            <h2>Check All Works →</h2>
+          </button></a
+        >
+      </div>
+      <!-- <h1>these isn't  everything yet</h1> -->
+    </div>
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-left">
+          <p>Desgined and developed by Vinay B.</p>
+        </div>
+
+        <div class="footer-center">
+          <a href="https://github.com/vinay-begar" aria-label="GitHub">
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"
+              alt="GitHub"
+            />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/vinay-begar/"
+            aria-label="LinkedIn"
+          >
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
+              alt="LinkedIn"
+            />
+          </a>
+          <a href="#" aria-label="Twitter">
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg"
+              alt="Twitter"
+            />
+          </a>
+        </div>
+        <div class="footer-right">
+          <p>© 2025 Vinay B. — All Rights Reserved.</p>
         </div>
       </div>
-  </section>
-
-  <div class="before-pattern">
-    <div class="heading">
-      <h1>Checkout My Works</h1>
-      <a href="/menus/work.html"><button class="after-button">
-          <h2>Check All Works →</h2>
-        </button></a>
-    </div>
-    <!-- <h1>these isn't  everything yet</h1> -->
-  </div>
-  <footer class="footer">
-    <div class="footer-container">
-      <div class="footer-left">
-        <p>Desgined and developed by Vinay B.</p>
-      </div>
-
-      <div class="footer-center">
-        <a href="https://github.com/vinay-begar" aria-label="GitHub">
-          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" />
-        </a>
-        <a href="https://www.linkedin.com/in/vinay-begar/" aria-label="LinkedIn">
-          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
-        </a>
-        <a href="#" aria-label="Twitter">
-          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="Twitter" />
-        </a>
-      </div>
-      <div class="footer-right">
-        <p>© 2025 Vinay B. — All Rights Reserved.</p>
-      </div>
-    </div>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
