--- a/menus/contact.html
+++ b/menus/contact.html
@@ -15,7 +15,7 @@
   <body>
     <header class="navbar">
       <div class="logo">
-        <a href="/index.html" class="heading">Vinay B.</a>
+        <a href="../index.html" class="heading">Vinay B.</a>
       </div>
       <div class="hamburger" id="hamburger">
         <span></span>
@@ -24,16 +24,16 @@
       </div>
       <div class="menu" id="nav-menu">
         <ul class="menu-head">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/menus/about.html">About</a></li>
-          <li><a href="/menus/work.html">Work</a></li>
-           <li class="mobile-btn"><a href="/menus/contact.html" class="btn small mob-reach-out">Reach out →</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./work.html">Work</a></li>
+           <li class="mobile-btn"><a href="./contact.html" class="btn small mob-reach-out">Reach out →</a></li>
           <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
         </ul>
       </div>
       <div class="nav-right">
         <!-- <span class="available">● available for work</span> -->
-        <a href="/menus/contact.html" class="btn small">Reach out →</a>
+        <a href="./contact.html" class="btn small">Reach out →</a>
       </div>
     </header>
     <section class="hero">
