--- a/menus/contact.html
+++ b/menus/contact.html
@@ -96,7 +96,7 @@
               alt="LinkedIn"
             />
           </a>
-          <a href="#" aria-label="Twitter">
+          <a href="https://x.com/vinay_begar" aria-label="Twitter">
             <img
               src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg"
               alt="Twitter"
