--- a/menus/work.html
+++ b/menus/work.html
@@ -60,7 +60,7 @@
             <p class="project-role">Web Developer</p>
             <div class="tech-stack">
             <a href="https://github.com/vinay-begar/Guess-My-Number-"><span class="tech">Github</span></a>
-             <a href="https://guess-my-number-inky-pi.vercel.app/"></a> <span class="tech">Livelink</span>
+             <a href="https://guess-my-number-inky-pi.vercel.app/"> <span class="tech">Livelink</span></a>
             </div>
           </div>
         </div>
@@ -89,8 +89,8 @@
             <h3 class="project-title">Static Job Listing</h3>
             <p class="project-role">UI/UX Designer</p>
             <div class="tech-stack">
-              <span class="tech">Github</span>
-              <span class="tech">Livelink</span>
+             <a href=""><span class="tech">Github</span></a>
+             <a href="https://guess-my-number-inky-pi.vercel.app/"> <span class="tech">Livelink</span></a>
             </div>
           </div>
         </div>
@@ -218,7 +218,7 @@
               alt="LinkedIn"
             />
           </a>
-          <a href="#" aria-label="Twitter">
+          <a href="https://x.com/vinay_begar" aria-label="Twitter">
             <img
               src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg"
               alt="Twitter"
