live link updated and GSAP added

--- a/menus/work.html
+++ b/menus/work.html
@@ -32,7 +32,11 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./work.html">Work</a></li>
-           <li class="mobile-btn"><a href="./contact.html" class="btn small mob-reach-out">Reach out →</a></li>
+          <li class="mobile-btn">
+            <a href="./contact.html" class="btn small mob-reach-out"
+              >Reach out →</a
+            >
+          </li>
           <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
         </ul>
       </div>
@@ -59,38 +63,58 @@
             <h3 class="project-title">Browser extension manager</h3>
             <p class="project-role">Web Developer</p>
             <div class="tech-stack">
-            <a href="https://github.com/vinay-begar/Guess-My-Number-"><span class="tech">Github</span></a>
-             <a href="https://guess-my-number-inky-pi.vercel.app/"> <span class="tech">Livelink</span></a>
+              <a href="https://github.com/vinay-begar/Browser-extension-manager"
+                ><span class="tech">Github</span></a
+              >
+              <a href="https://browser-extension-manager-e3bz.vercel.app/">
+                <span class="tech">Livelink</span></a
+              >
             </div>
           </div>
         </div>
 
         <div class="project-card">
           <div class="project-image">
-            <img style="height: 320px; width: 400px;" src="/project-images/Guess my number img.png" alt="Project Image" />
+            <img
+              style="height: 320px; width: 400px"
+              src="/project-images/Guess my number img.png"
+              alt="Project Image"
+            />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
             <h3 class="project-title">Guess My Number !</h3>
             <p class="project-role">Frontend Developer</p>
             <div class="tech-stack">
-              <span class="tech">Github</span>
-              <span class="tech">Livelink</span>
+              <a href="https://github.com/vinay-begar/Guess-My-Number-"
+                ><span class="tech">Github</span></a
+              >
+              <a href="https://guess-my-number-inky-pi.vercel.app/">
+                <span class="tech">Livelink</span></a
+              >
             </div>
           </div>
         </div>
 
         <div class="project-card">
           <div class="project-image">
-            <img style="height: 320px;" src="/project-images/job-listing.jpg" alt="Project Image" />
+            <img
+              style="height: 320px"
+              src="/project-images/job-listing.jpg"
+              alt="Project Image"
+            />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
             <h3 class="project-title">Static Job Listing</h3>
             <p class="project-role">UI/UX Designer</p>
             <div class="tech-stack">
-             <a href=""><span class="tech">Github</span></a>
-             <a href="https://guess-my-number-inky-pi.vercel.app/"> <span class="tech">Livelink</span></a>
+               <a href="https://github.com/vinay-begar/Static-job-listing"
+                ><span class="tech">Github</span></a
+              >
+              <a href="https://static-job-listing-zeta-neon.vercel.app/">
+                <span class="tech">Livelink</span></a
+              >
             </div>
           </div>
         </div>
@@ -99,48 +123,69 @@
       <div class="projects-container">
         <div class="project-card">
           <div class="project-image">
-            <img style="height: 320px; width: 400px;"
+            <img
+              style="height: 320px; width: 400px"
               src="/project-images/Desktop view.png"
               alt="Project Image"
             />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
-            <h3 class="project-title">Browser extension manager</h3>
+            <h3 class="project-title">Beats Landing Page</h3>
             <p class="project-role">Web Developer</p>
             <div class="tech-stack">
-              <span class="tech">Github</span>
-              <span class="tech">Livelink</span>
+              <a href="https://github.com/vinay-begar/beats-landing"
+                ><span class="tech">Github</span></a
+              >
+              <a href="https://beats-landing-psi.vercel.app/">
+                <span class="tech">Livelink</span></a
+              >
             </div>
           </div>
         </div>
 
         <div class="project-card">
           <div class="project-image">
-            <img style="height: 320px; width: 400px;" src="/project-images/pig-game.png" alt="Project Image" />
+            <img
+              style="height: 320px; width: 400px"
+              src="/project-images/pig-game.png"
+              alt="Project Image"
+            />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
-            <h3 class="project-title">Portfolio Website</h3>
+            <h3 class="project-title">Pig Game</h3>
             <p class="project-role">Frontend Developer</p>
             <div class="tech-stack">
-              <span class="tech">Github</span>
-              <span class="tech">Livelink</span>
+              <a href="https://github.com/vinay-begar/Pig-Game"
+                ><span class="tech">Github</span></a
+              >
+              <a href="https://pig-game-sigma-smoky.vercel.app/">
+                <span class="tech">Livelink</span></a
+              >
             </div>
           </div>
         </div>
 
         <div class="project-card">
           <div class="project-image">
-            <img style="height: 300px;" src="/project-images/desktop view-data.png" alt="Project Image" />
+            <img
+              style="height: 300px"
+              src="/project-images/desktop view-data.png"
+              alt="Project Image"
+            />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
-            <h3 class="project-title">Dashboard UI</h3>
+            <h3 class="project-title">Data Analytics landing Page</h3>
             <p class="project-role">UI/UX Designer</p>
             <div class="tech-stack">
-              <span class="tech">Github</span>
-              <span class="tech">Livelink</span>
+              <a href="https://github.com/vinay-begar/Data-Analytics-landing-Page"
+                ><span class="tech">Github</span></a
+              >
+              <a href="https://data-analytics-landing-page-beta.vercel.app/">
+                <span class="tech">Livelink</span></a
+              >
             </div>
           </div>
         </div>
@@ -149,48 +194,66 @@
       <div class="projects-container">
         <div class="project-card">
           <div class="project-image">
-            <img 
+            <img
               src="/project-images/huddle-landing-page.jpg"
               alt="Project Image"
             />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
-            <h3 class="project-title">Browser extension manager</h3>
+            <h3 class="project-title">huddle landing Page</h3>
             <p class="project-role">Web Developer</p>
             <div class="tech-stack">
-              <span class="tech">Github</span>
-              <span class="tech">Livelink</span>
+              <a href="https://github.com/vinay-begar/huddle-landing-page"
+                ><span class="tech">Github</span></a
+              >
+              <a href="https://huddle-landing-page-ruby-five.vercel.app/">
+                <span class="tech">Livelink</span></a
+              >
             </div>
           </div>
         </div>
 
         <div class="project-card">
           <div class="project-image">
-            <img src="/project-images/perfume-gabrille img.jpg" alt="Project Image" />
+            <img
+              src="/project-images/perfume-gabrille img.jpg"
+              alt="Project Image"
+            />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
-            <h3 class="project-title">Portfolio Website</h3>
+            <h3 class="project-title">Perfume Gabrille</h3>
             <p class="project-role">Frontend Developer</p>
             <div class="tech-stack">
-              <span class="tech">Github</span>
-              <span class="tech">Livelink</span>
+             <a href="https://github.com/vinay-begar/Perfume-Gabrielle"
+                ><span class="tech">Github</span></a
+              >
+              <a href="https://perfume-gabrielle-tau.vercel.app/">
+                <span class="tech">Livelink</span></a
+              >
             </div>
           </div>
         </div>
 
         <div class="project-card">
           <div class="project-image">
-            <img src="/project-images/law-justice img.png" alt="Project Image" />
+            <img
+              src="/project-images/law-justice img.png"
+              alt="Project Image"
+            />
             <div class="image-fade"></div>
           </div>
           <div class="project-details">
-            <h3 class="project-title">Dashboard UI</h3>
+            <h3 class="project-title">Law and Justice</h3>
             <p class="project-role">UI/UX Designer</p>
             <div class="tech-stack">
-              <span class="tech">Github</span>
-              <span class="tech">Livelink</span>
+               <a href="https://github.com/vinay-begar/Law-and-Justice"
+                ><span class="tech">Github</span></a
+              >
+              <a href="https://law-and-justice-sand.vercel.app/">
+                <span class="tech">Livelink</span></a
+              >
             </div>
           </div>
         </div>
@@ -199,7 +262,7 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-left">
-           <p>Desgined and developed by Vinay B.</p>
+          <p>Desgined and developed by Vinay B.</p>
         </div>
 
         <div class="footer-center">
@@ -230,5 +293,17 @@
         </div>
       </div>
     </footer>
+     <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
+        integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      ></script>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"
+        integrity="sha512-P2IDYZfqSwjcSjX0BKeNhwRUH8zRPGlgcWl5n6gBLzdi4Y5/0O4zaXrtO4K9TZK6Hn1BenYpKowuCavNandERg=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      ></script>
   </body>
 </html>
